# occ

./: .gitignore  Dockerfile  README.md  install.sh  mise.toml  occ  plan.md  prd.md  pyproject.toml
src/occ/: __init__.py  cli.py  config.py  docker.py  env.py
src/occ/resources/: Dockerfile  config.toml
test/: integration.sh
