[project]
name = "occ"
version = "1.0.0"
description = "OpenCode Container CLI - Ephemeral development containers pre-loaded with OpenCode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
occ = "occ.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/occ"]
